@@ -1,8 +1,0 @@
-<p>
-<table border="0" cellpadding="2" cellspacing="1" width="100%" bgcolor="white">
-<tbody>
-<tr>
-<td width="15%" valign="top">
-<?php echo(file_get_contents('../../left_menu.inc'));?>
-</td>
-<td width="85%" valign="top">
