@@ -4,6 +4,7 @@
   <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
   <title>SDCC - Nightly Snapshots</title>
   <link type="text/css" href="style.css" rel="stylesheet" />
+  <link rel="shortcut icon" type="image/x-icon" href="/images/sdcc.ico" />
 </head>
 <body bgcolor="white" link="teal" vlink="#483d8b">
   <div align="left">
